Add embeddings notebooks for embeddings and one with some advance models, also add time in baseline model

--- a/notebooks/baseline_model.ipynb
+++ b/notebooks/baseline_model.ipynb
@@ -17,6 +17,7 @@
     "#load dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import time\n",
     "\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer, CountVectorizer\n",
     "from skmultilearn.problem_transform import ClassifierChain\n",
@@ -50,11 +51,11 @@
     "#load in preprocessed train and validation datas\n",
     "#your path here\n",
     "\n",
-    "X_train_Q1 = pd.read_csv('data/X_train_pp.csv')\n",
-    "X_valid_Q1 = pd.read_csv('data/X_valid_pp.csv')\n",
+    "X_train_Q1 = pd.read_csv('../data/X_train_pp.csv')\n",
+    "X_valid_Q1 = pd.read_csv('../data/X_valid_pp.csv')\n",
     "\n",
-    "y_train_Q1 = pd.read_csv('data/y_train_Q1.csv')\n",
-    "y_valid_Q1 = pd.read_csv('data/y_valid_Q1.csv')"
+    "y_train_Q1 = pd.read_csv('../data/y_train.csv')\n",
+    "y_valid_Q1 = pd.read_csv('../data/y_valid.csv')"
    ]
   },
   {
@@ -218,6 +219,7 @@
     "\n",
     "for model_name, model in models.items():\n",
     "\n",
+    "    t = time.time()\n",
     "    classifier_chain = ClassifierChain(model)\n",
     "    model = classifier_chain.fit(X_train, subthemes_ytrain)\n",
     "    train = model.score(X_train, np.array(subthemes_ytrain))\n",
@@ -225,12 +227,14 @@
     "    y_pred = model.predict(X_valid)\n",
     "    recall = recall_score(np.array(subthemes_yvalid), y_pred, average= 'micro')\n",
     "    precision = precision_score(np.array(subthemes_yvalid), y_pred, average= 'micro')\n",
+    "    elapsed_time = time.time() - t\n",
     "    \n",
     "    case= {'Model': model_name,\n",
     "           'Train Accuracy': train,\n",
     "           'Validation Accuracy': valid,\n",
     "           'Recall Score': recall,\n",
-    "           'Precision Score': precision}\n",
+    "           'Precision Score': precision,\n",
+    "           'Time': elapsed_time}\n",
     "    \n",
     "    results_dict.append(case)"
    ]
@@ -342,6 +346,7 @@
     "    Show results of training accuracy score, validation accuracy score, \n",
     "    validation recall and precision scores.\n",
     "    \"\"\"\n",
+    "    t = time.time()\n",
     "    classifier_chain = ClassifierChain(base_model)\n",
     "    \n",
     "    model = classifier_chain.fit(X_train, Ytrain)\n",
@@ -350,12 +355,14 @@
     "    y_pred = model.predict(X_valid)\n",
     "    recall = recall_score(np.array(Yvalid), y_pred, average= 'micro')\n",
     "    precision = precision_score(np.array(Yvalid), y_pred, average= 'micro')\n",
+    "    elapsed_time = time.time() - t\n",
     "    \n",
     "    case= {'Model': base_model,\n",
     "           'Train Accuracy': train,\n",
     "           'Validation Accuracy': valid,\n",
     "           'Recall Score': recall,\n",
-    "           'Precision Score': precision}\n",
+    "           'Precision Score': precision,\n",
+    "           'Time': elapsed_time}\n",
     "    \n",
     "    results_dict2.append(case)    "
    ]
@@ -808,6 +815,7 @@
     "\n",
     "for model_name, model in models.items():\n",
     "\n",
+    "    t = time.time()\n",
     "    classifier_chain = ClassifierChain(model)\n",
     "    model = classifier_chain.fit(X_train, themes_ytrain)\n",
     "    train = model.score(X_train, np.array(themes_ytrain))\n",
@@ -815,12 +823,14 @@
     "    y_pred = model.predict(X_valid)\n",
     "    recall = recall_score(np.array(themes_yvalid), y_pred, average= 'micro')\n",
     "    precision = precision_score(np.array(themes_yvalid), y_pred, average= 'micro')\n",
+    "    elapsed_time = time.time() - t\n",
     "    \n",
     "    case= {'Model': model_name,\n",
     "           'Train Accuracy': train,\n",
     "           'Validation Accuracy': valid,\n",
     "           'Recall Score': recall,\n",
-    "           'Precision Score': precision}\n",
+    "           'Precision Score': precision,\n",
+    "           'Time': elapsed_time}\n",
     "    \n",
     "    results_dict_themes.append(case)"
    ]
@@ -931,6 +941,8 @@
     "    Show results of training accuracy score, validation accuracy score, \n",
     "    validation recall and precision scores.\n",
     "    \"\"\"\n",
+    "    t = time.time()\n",
+    "    \n",
     "    classifier_chain = ClassifierChain(base_model)\n",
     "    \n",
     "    model = classifier_chain.fit(X_train, Ytrain) #subthemes_ytrain)\n",
@@ -939,12 +951,14 @@
     "    y_pred = model.predict(X_valid)\n",
     "    recall = recall_score(np.array(Yvalid), y_pred, average= 'micro') #subthemes_yvalid\n",
     "    precision = precision_score(np.array(Yvalid), y_pred, average= 'micro') #subthemes_yvalid\n",
+    "    elapsed_time = time.time() - t\n",
     "    \n",
     "    case= {'Model': base_model,\n",
     "           'Train Accuracy': train,\n",
     "           'Validation Accuracy': valid,\n",
     "           'Recall Score': recall,\n",
-    "           'Precision Score': precision}\n",
+    "           'Precision Score': precision,\n",
+    "           'Time': elapsed_time}\n",
     "    \n",
     "    #print(case)\n",
     "    #change results dictionary name\n",
