--- a/notebooks/Deep Learning - GPU - Test - CNN.ipynb
+++ b/notebooks/Deep Learning - GPU - Test - CNN.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Deep Learning Model - CNN with Image Classification"
+    "# GPU Testing for CNN"
    ]
   },
   {
@@ -99,7 +99,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:plaidml:Opening device \"opencl_amd_radeon_pro_555x_compute_engine.0\"\n"
+      "INFO:plaidml:Opening device \"metal_amd_radeon_pro_555x.0\"\n"
      ]
     },
     {
@@ -108,7 +108,7 @@
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
       "Epoch 1/12\n",
-      "17408/60000 [=======>......................] - ETA: 33s - loss: 0.5459 - acc: 0.8253"
+      " 6784/60000 [==>...........................] - ETA: 28s - loss: 0.9556 - acc: 0.6879"
      ]
     },
     {
@@ -123,31 +123,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "60000/60000 [==============================] - 46s 762us/step - loss: 0.2651 - acc: 0.9174 - val_loss: 0.0608 - val_acc: 0.9815\n",
+      "60000/60000 [==============================] - 25s 422us/step - loss: 0.2639 - acc: 0.9189 - val_loss: 0.0530 - val_acc: 0.9834\n",
       "Epoch 2/12\n",
-      "60000/60000 [==============================] - 38s 629us/step - loss: 0.0888 - acc: 0.9740 - val_loss: 0.0402 - val_acc: 0.9862\n",
+      "60000/60000 [==============================] - 22s 362us/step - loss: 0.0868 - acc: 0.9743 - val_loss: 0.0399 - val_acc: 0.9872\n",
       "Epoch 3/12\n",
-      "60000/60000 [==============================] - 38s 628us/step - loss: 0.0687 - acc: 0.9797 - val_loss: 0.0366 - val_acc: 0.9871\n",
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0650 - acc: 0.9808 - val_loss: 0.0340 - val_acc: 0.9891\n",
       "Epoch 4/12\n",
-      "60000/60000 [==============================] - 38s 631us/step - loss: 0.0552 - acc: 0.9837 - val_loss: 0.0361 - val_acc: 0.9881\n",
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0547 - acc: 0.9831 - val_loss: 0.0300 - val_acc: 0.9898\n",
       "Epoch 5/12\n",
-      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0469 - acc: 0.9861 - val_loss: 0.0355 - val_acc: 0.9886\n",
+      "60000/60000 [==============================] - 22s 360us/step - loss: 0.0484 - acc: 0.9858 - val_loss: 0.0293 - val_acc: 0.9908\n",
       "Epoch 6/12\n",
-      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0409 - acc: 0.9880 - val_loss: 0.0319 - val_acc: 0.9883\n",
+      "60000/60000 [==============================] - 22s 362us/step - loss: 0.0428 - acc: 0.9867 - val_loss: 0.0278 - val_acc: 0.9907\n",
       "Epoch 7/12\n",
-      "60000/60000 [==============================] - 38s 630us/step - loss: 0.0373 - acc: 0.9887 - val_loss: 0.0273 - val_acc: 0.9919\n",
+      "60000/60000 [==============================] - 22s 359us/step - loss: 0.0374 - acc: 0.9887 - val_loss: 0.0313 - val_acc: 0.9904\n",
       "Epoch 8/12\n",
-      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0343 - acc: 0.9893 - val_loss: 0.0271 - val_acc: 0.9913\n",
+      "60000/60000 [==============================] - 21s 355us/step - loss: 0.0331 - acc: 0.9901 - val_loss: 0.0268 - val_acc: 0.9910\n",
       "Epoch 9/12\n",
-      "60000/60000 [==============================] - 38s 633us/step - loss: 0.0323 - acc: 0.9900 - val_loss: 0.0279 - val_acc: 0.9924\n",
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0311 - acc: 0.9899 - val_loss: 0.0268 - val_acc: 0.9918\n",
       "Epoch 10/12\n",
-      "60000/60000 [==============================] - 37s 624us/step - loss: 0.0280 - acc: 0.9912 - val_loss: 0.0309 - val_acc: 0.9915\n",
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0272 - acc: 0.9916 - val_loss: 0.0277 - val_acc: 0.9920\n",
       "Epoch 11/12\n",
-      "60000/60000 [==============================] - 38s 632us/step - loss: 0.0285 - acc: 0.9913 - val_loss: 0.0280 - val_acc: 0.9904\n",
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0285 - acc: 0.9913 - val_loss: 0.0242 - val_acc: 0.9916\n",
       "Epoch 12/12\n",
-      "60000/60000 [==============================] - 38s 626us/step - loss: 0.0269 - acc: 0.9914 - val_loss: 0.0279 - val_acc: 0.9910\n",
-      "Test loss: 0.027639875388145448\n",
-      "Test accuracy: 0.991\n"
+      "60000/60000 [==============================] - 22s 361us/step - loss: 0.0260 - acc: 0.9918 - val_loss: 0.0248 - val_acc: 0.9929\n",
+      "Test loss: 0.024782394194602965\n",
+      "Test accuracy: 0.9929\n"
      ]
     }
    ],
@@ -174,6 +174,68 @@
     "score = model.evaluate(x_test, y_test, verbose=0)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 2s 196us/step\n",
+      "For threshold:  0.1\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9807, Recall: 0.9970, F1-measure: 0.9888\n",
+      "For threshold:  0.2\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9865, Recall: 0.9955, F1-measure: 0.9910\n",
+      "For threshold:  0.3\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9898, Recall: 0.9947, F1-measure: 0.9923\n",
+      "For threshold:  0.4\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9915, Recall: 0.9936, F1-measure: 0.9926\n",
+      "For threshold:  0.5\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9932, Recall: 0.9924, F1-measure: 0.9928\n",
+      "For threshold:  0.6\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9943, Recall: 0.9903, F1-measure: 0.9923\n",
+      "For threshold:  0.7\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9952, Recall: 0.9891, F1-measure: 0.9921\n",
+      "For threshold:  0.8\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9964, Recall: 0.9859, F1-measure: 0.9911\n",
+      "For threshold:  0.9\n",
+      "Micro-average quality numbers\n",
+      "Precision: 0.9977, Recall: 0.9811, F1-measure: 0.9893\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "\n",
+    "pred = model.predict(x_test, batch_size=512, verbose=1)\n",
+    "predictions = pred\n",
+    "thresholds=[0.1,0.2,0.3,0.4,0.5,0.6,0.7,0.8,0.9]\n",
+    "\n",
+    "for val in thresholds:\n",
+    "    print(\"For threshold: \", val)\n",
+    "    pred=predictions.copy()\n",
+    "  \n",
+    "    pred[pred>=val]=1\n",
+    "    pred[pred<val]=0\n",
+    "  \n",
+    "    precision = precision_score(y_test, pred, average='micro')\n",
+    "    recall = recall_score(y_test, pred, average='micro')\n",
+    "    f1 = f1_score(y_test, pred, average='micro')\n",
+    "   \n",
+    "    print(\"Micro-average quality numbers\")\n",
+    "    print(\"Precision: {:.4f}, Recall: {:.4f}, F1-measure: {:.4f}\".format(precision, recall, f1))"
    ]
   },
   {
