--- a/reports/Final_Presentation.Rmd
+++ b/reports/Final_Presentation.Rmd
@@ -40,11 +40,11 @@ import altair as alt
 
 **Work Environment Survey (WES)**  
  
-  - conducted by BC Stats for employees within BC Public Service
+  - Conducted by BC Stats for employees within BC Public Service
   
-  - measures the health of work environments and identifies areas for improvement
+  - Measures the health of work environments and identifies areas for improvement
   
-  - ~80 quantitative questions (5 point scale) and 2 open-ended qualitative questions
+  - ~80 quantitative questions (5 Likert scale) and 2 open-ended qualitative questions
   
 </div>
 
@@ -91,12 +91,12 @@ What one thing would you like your organization to focus on to improve your work
 
 **Question 1:** 
 
-  - comments encoded into <span style="color:#005c99">12 themes </span>and <span style="color:#005c99">63 subthemes</span>
+  - Comments encoded into <span style="color:#005c99">12 themes </span>and <span style="color:#005c99">63 subthemes</span>
   - <span style="color:#005c99">+31,000 </span>labelled comments for 2013, 2018, 2020, <span style="color:#005c99">+12,000 </span>additional comments from 2015
 
 **Question 2:**
 
-  - themes also encoded, but not as reliable as Question 1's
+  - Themes also encoded, but not as reliable as Question 1's
   - <span style="color:#005c99">+6,000 </span>labelled comments for 2018, <span style="color:#005c99">+9,000 </span>additional comments from 2015, 2020
 
 <font size="3"> *Note: this is a fake comment as an example of the data. </font>
@@ -106,17 +106,17 @@ What one thing would you like your organization to focus on to improve your work
 <br>
 **<font size="5"> 1) Build a model to automate multi-label text classification that: </font> **
 
-- predicts label(s) for Question 1 and 2's main <span style="color:#005c99">themes</span>
+- Predicts label(s) for Question 1 and 2's main <span style="color:#005c99">themes</span>
 
-- predicts label(s) for Question 1's <span style="color:#005c99">sub-themes</span>
+- Predicts label(s) for Question 1's <span style="color:#005c99">subthemes</span>
 
 <br>
 
-**<font size="5"> 2) Build an app for visualizations on text data:</font>**
+**<font size="5"> 2) Build an app for visualizations of text data:</font>**
 
-- identify and compare <span style="color:#005c99"> common words </span> used for each question
+- Identify and compare <span style="color:#005c99"> common words </span> used for each question
 
-- identify <span style="color:#005c99"> trends on concerns (Q1) </span>and <span style="color:#005c99">appreciations (Q2)  </span> for BC ministries over the given years 
+- Identify <span style="color:#005c99"> trends on concerns (Q1) </span>and <span style="color:#005c99">appreciations (Q2)  </span> for BC ministries over the given years 
 
 
 ## Challenges with data| 1) Sparsity
@@ -145,7 +145,7 @@ What one thing would you like your organization to focus on to improve your work
 ## Text classification methodology
 
 <center>
-  <img src="./figures/flowchart.png" width='80%'/>
+  <img src="./figures/flowchart.png" width='70%'/>
 </center>
 
 
@@ -169,25 +169,23 @@ What one thing would you like your organization to focus on to improve your work
 <b>"George and I love when the department gives us new coupons!"</b></font>
                 
 
-## Baseline Model: Classifier Chains
+## Modelling Techniques
+
 <center>
-<img src="./figures/Basic.png" width='45%'/>
+<img src="./figures/model_stage-1.png" width='25%'/>
 </center>
 <br>
 
-<span style="color:#005c99"> **TF-IDF Vectorizer**</span> uses weights instead of token counts (CountVectorizer).
+- <font size="5">**Baseline models**:</font> used<span style="color:#005c99"> **TF-IDF Vectorizer**</span> and traditional machine learning classifiers (RandomForest, GaussianNB, etc)
+    - best results with <span style="color:#005c99">**LinearSVC**</span>
 
-<span style="color:#005c99"> **Classifier Chains** </span> is a multi-label classification method which <span style="color:#005c99">preserves order and occurence of labels.</span> 
+<br>
 
-- ran multiple scikit-learn base classifiers (RandomForest, GaussianNB, etc) 
-- best result with <span style="color:#005c99">**LinearSVC**</span>
-
+- <font size="5">**Deep Learning models**:</font> ran multiple models including <span style="color:#005c99">**CNNs** and **sequential models**</span> with pre-trained embeddings 
 
 
-## Advanced Model: Pre-Trained Embeddings 
-<center>
-<img src="./figures/Theme.png" width='45%'/>
-</center>
+
+## Pre-Trained Embeddings
 <br>
 
 #### <span style="color:#005c99">**Fasttext, Glove, Universal Sentence Encoder**</span>
@@ -199,17 +197,33 @@ What one thing would you like your organization to focus on to improve your work
 
 <br>
 
-- explored several embeddings on various models
+- Built embedding matrixes & transformed comments to padded sequential data to fit into embedding size. 
 
-- built embedding matrix & transformed comments to padded sequenced data to fit into embedding size 
+- Embeddings allowed usage of public cloud services as data contains sensitive information.
 
-- used these saved embeddings on public cloud services as data contains sensitive information
+
+## Deep Learning Models
+
+<span style="color:#005c99"> **BiGRU**</span>
+
+- <font size="3">**GRUs:** similar to LSTMs, major difference is they have 2 gates (reset gate and update gate) instead of four (forget, input, update, output)</font>
+- <font size="3">**Bidirectional GRUs**: Uses sentence sequences from both left-to-right and right-to-left </font>
+
+<span style="color:#005c99">**Multichannel CNNs:**</span>
+
+- <font size="3"> Multiple versions of standard CNN models with different kernel sizes.</font>
+- <font size="3"> Specifically, we have defined a model with 3 input channels for kernel sizes 4, 6 and 8</font>
+- <font size="3">n - number of words , k - dimension of the word embedding</font>
+
+<center>
+  <img src="./figures/multichannel_cnn.png" width='55%'/>
+</center>
 
 
 ##  How we measured success| Precision & Recall
 <div class= "columns-2">
 <center>
-  <img src="./figures/precision_recall.png" width='70%'/>
+  <img src="./figures/precision_recall.png" width='60%'/>
 </center>
   <img src="./figures/precision_recall2.png" width='90%'/>
   
@@ -231,32 +245,25 @@ What one thing would you like your organization to focus on to improve your work
 ## Advanced Model: Fasttext + BiGRU
 
 <center>
-<img src="./figures/precision_recall_auc.png" width='85%'/>
+<img src="./figures/precision_recall_auc.png" width='90%'/>
 </center>
 
 
 ## Results for Theme Labelling Models
 
-| Model        | Accuracy      | Precision  | Recall  |F1  |
-|:---------------|:-------------:|:------:|:------:|:------:|
-| TF-IDF + LinearSVC       | 0.50 | 0.79 |   0.63 | 0.70
-| Fasttext + BiGRU       | 0.53  |   0.75 |   0.71 | 0.73
-
-
-<br>
 <br>
 
-#### <b>Last year's capstone team's results of models:</b>
+<div class= "columns-2">
+
+<img src="./figures/baseline_model_results.png" width='105%'/>
 
 <br>
 
-| Model        | Accuracy      | Precision  | Recall  |F1  |
-|:---------------|:-------------:|:------:|:------:|:------:|
-| Bag of Words + LinearSVC    | 0.45 | 0.74 |   0.64  | 0.69
-| Ensemble Model       | 0.53  |   0.83 |   0.66 | 0.74
-
+<img src="./figures/advanced_model_results.png" width='105%'/>
 
 <br>
+
+</div>
 
 <font size="3">*Source: [BC Stats Capstone 2019-Final Report, by A. Quinton, A. Pearson, F. Nie](https://github.com/aaronquinton/mds-capstone-bcstats/blob/master/reports/BCStats_Final_Report.pdf)*</font>
 
@@ -265,12 +272,12 @@ What one thing would you like your organization to focus on to improve your work
 
 <div class= "columns-2">
 
-<center>
+
 <img src="./figures/best_worst_label_metric.png" width='110%'/>
-</center>
+
 <br> 
 
-- <font size="4">Themes with high F1 scores (CB) can be encoded <span style="color:#005c99">**automatically using the model**</span>, while themes with low score (OTH) should be <span style="color:#005c99">**manually verified**</span> by BC Stats </font>
+- <font size="4">Themes with high F1 scores (CB) can be encoded <span style="color:#005c99">**automatically using the model**</span>, while themes with lower scores (OTH) can be <span style="color:#005c99">**manually verified**</span> by BC Stats. </font>
 
 - <font size="4">Recommendation to use a <span style="color:#005c99">**combination of machine learning and manual encoding.**</span></font>
 
@@ -284,15 +291,17 @@ What one thing would you like your organization to focus on to improve your work
 
 ## Building Subtheme Models | Hierarchical approach
 
+<div class= "columns-2">
+
 <center>
-
-<img src="figures/Subtheme.png" width="50%"/>
-
+<img src="figures/Subtheme.png" width="60%"/>
 </center>
 
 <br>
 
 **Subthemes are predicted based on the theme(s) our model has assigned to the comment.**
+
+</div>
 
 
 ## Precision Recall Plot for Subtheme Models
@@ -316,30 +325,15 @@ What one thing would you like your organization to focus on to improve your work
 
 
 ## Question 2: Predicting Themes
-
 <center>
-<img src="figures/Question2.png" width="65%"/>
+<img src="figures/Question2.png" width="40%"/>
 </center>
 
-<br>
-
-<center><font size="4"><span style="color:#005c99">**Results of our model predicting on sample data of Question 2 manually encoded by BC Stats (at 0.4 threshold):**</span></font> </center>
-
-```{r include= FALSE}
-q2 <- data.frame(Accuracy = 0.46,
-           Precision = 0.77 , 
-           Recall = 0.63,
-           F1 = 0.69)
-kable(q2) %>%
-  kable_styling(bootstrap_options = c("striped", "hover")) 
-
-```
-<br>
-
 <center>
-<img src="figures/q2_results.png" width="70%"/>
+<img src="figures/model_performance.png" width="60%"/>
 </center>
-</font>
+
+
 
 
 ## Dashboard
@@ -352,7 +346,7 @@ kable(q2) %>%
 ## Methodologies that did not work
 
 - <span style="color:#005c99"> **overfitting**</span> in **CNNs** and **multi-channel CNNs**
-- <span style="color:#005c99">**Universal Sentence Encoder**</span> and <span style="color:#005c99">**BERT** </span>embeddings
+- <span style="color:#005c99">**Universal Sentence Encoder**</span> embeddings 
 - <span style="color:#005c99">**Topic modelling** </span> for Question 2 (too much overlap in words, ambiguity)
 
 <center>
@@ -360,20 +354,23 @@ kable(q2) %>%
 </center>
 
 
-## Recommendations
+## Recommendations & Conclusions
 
-- observe better results with more **more data** 
+- Expected to observe better results with **more data** 
 
-- use embeddings and padded data on **public cloud services** (Google Gollab, AWS) to apply complex machine learning algorithms on sensitive data
+<br>
 
-- **BERT** 
+- Create embeddings and padded data on sensitive data **public cloud services** (Google Gollab, AWS) to apply complex machine learning algorithms on sensitive data 
+    - BERT embeddings
 
-- **Topic modelling** for Question 2 after removing commonly repeated words
+<br>
+
+- Use model to automate labelling on themes and subthemes with high precision and recall, and manually encode or verify model's results on other comments 
 
 
-## Thank you! Questions?
+## Thank you. Questions?
 
 <center>
-<img src="./figures/BC-Stats_meeting.png" width='60%'/>
+<img src="./figures/BC-Stats_meeting.png" width='50%'/>
 </center>
 
